<resources>
    <string name="app_name">Montact</string>
    <string name="calendar">test</string>
    <string name="tabs_item1">연락처</string>
    <string name="tabs_item2">명함</string>
    <string name="fab_add_label">연락처 추가</string>
    <string name="fab_cam_label">명함 저장</string>
    <string name="name">이름</string>
    <string name="phone_num">전화번호</string>
    <string name="email">email</string>
    <string name="memo">메모</string>
    <string name="done">저장</string>
    <string name="cancel">취소</string>
    <string name="call">전화</string>
    <string name="sms">메세지</string>
    <string name="delete">삭제</string>
    <string name="edit">수정</string>
    <string name="saved_date">최종 수정일 : %s</string>
    <string name="text_scan">텍스트 인식</string>
    <string name="LoadingMessage">잠시만 기다려주세요...</string>
</resources>