<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:startIconDrawable="@drawable/ic_person_black_24dp"
        style="@style/FilledEditTextMontact"
        android:hint="@string/name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_phone_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_name_layout"
        app:startIconDrawable="@drawable/ic_phone_black_24dp"
        android:hint="@string/phone_num"
        style="@style/FilledEditTextMontact"
        android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_phone_layout"
        app:startIconDrawable="@drawable/ic_email_black_24dp"
        android:layout_marginTop="20dp"
        style="@style/FilledEditTextMontact"
        android:hint="@string/email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_memo_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_email_layout"
        app:startIconDrawable="@drawable/ic_history_edu_black_24dp"
        android:layout_marginTop="20dp"
        android:hint="@string/memo"
        style="@style/OutlinedEditTextMontact">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_memo_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_done_btn"
        style="@style/ButtonMontact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_memo_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/done"
        app:icon="@drawable/ic_done_black_24dp"
        app:iconTint="@color/secondaryLightColor"/>

    <Button
        android:id="@+id/add_cancel_btn"
        style="@style/ButtonMontact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/add_done_btn"
        app:layout_constraintTop_toBottomOf="@id/add_memo_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/cancel"
        app:icon="@drawable/ic_close_black_24dp"
        app:iconTint="@color/orange"/>



</androidx.constraintlayout.widget.ConstraintLayout>