<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/main_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:menu="@menu/top_app_bar"
            style="@style/AppbarMontact"
            app:layout_scrollFlags="scroll|snap"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs_layout"
            style="@style/TabLayoutMontact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            app:tabMaxWidth="0dp"
            app:tabGravity="fill">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabs_item1"
                android:icon="@drawable/ic_contacts_black_24dp"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabs_item2"
                android:icon="@drawable/ic_badge_black_24dp"/>

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>