<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    app:cardBackgroundColor="@color/primaryLightColor"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contact_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_layout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardCornerRadius="25dp"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/contact_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_face_black_24dp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/profile_layout"
                app:layout_constraintTop_toTopOf="@id/profile_layout"
                style="@style/TextViewMontact"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/contact_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewMontact"
                app:layout_constraintTop_toBottomOf="@id/contact_name"
                app:layout_constraintStart_toStartOf="@id/contact_name"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/app_name"
                android:textColor="@color/textMoreLighter"
                android:maxLines="1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contact_expanded"
            android:layout_marginTop="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_default"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/edit_bg">

            <com.google.android.material.textview.MaterialTextView
                android:layout_margin="10dp"
                android:id="@+id/contact_date"
                style="@style/TextViewMontact"
                android:textSize="10sp"
                android:textColor="@color/primaryDarkColor"
                android:text="@string/saved_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/contact_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact_date"
                android:text="@string/email"
                android:textStyle="bold"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/contact_email"
                android:layout_marginHorizontal="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/contact_e"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/contact_e"
                style="@style/TextViewMontact"/>

            <TextView
                android:id="@+id/contact_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact_e"
                android:text="@string/memo"
                android:textStyle="bold"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/contact_memo"
                style="@style/TextViewMontact"
                android:layout_marginEnd="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/contact_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/contact_m"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact_memo"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:layout_margin="5dp"
                    android:id="@+id/contact_call"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="3"
                    android:text="@string/call"
                    app:icon="@drawable/ic_phone_black_24dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/contact_sms"
                    android:layout_margin="5dp"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="3"
                    app:icon="@drawable/ic_sms_black_24dp"
                    android:text="@string/sms"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/contact_more_opt"
                    android:layout_margin="5dp"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/primaryLightColor"
                    android:src="@drawable/ic_more_vert_black_24dp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>