<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline">

        <ImageView
            android:id="@+id/scanned_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <ScrollView
        android:id="@+id/scanned_text_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@id/scan_buttons">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_name"
            style="@style/OutlinedEditTextMontact">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/scanned_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/processing_ani"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_fileName="wating.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@id/scan_buttons"/>

    <LinearLayout
        android:id="@+id/scan_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/scan_cancel_btn"
            style="@style/ButtonMontact"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/cancel"
            app:icon="@drawable/ic_close_black_24dp"
            app:iconTint="@color/orange"/>

        <Button
            android:id="@+id/scan_done_btn"
            style="@style/ButtonMontact"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:text="@string/done"
            app:icon="@drawable/ic_done_black_24dp"
            app:iconTint="@color/secondaryLightColor"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>